styles: Align ordered and unordered list item styles Using same styling for ordered and unordered lists, bringing on one horizontal starting point with surrounding block level elements. Bug: [T151100](https://phabricator.wikimedia.org/T151100)

--- a/css/wmui-style-guide.dev.css
+++ b/css/wmui-style-guide.dev.css
@@ -126,9 +126,11 @@ p {
 		margin-top: 1.6rem;
 	}
 
+/* ... Lists ... */
+ol,
 ul {
 	margin: 0.8rem 0;
-	padding: 0 1.6rem;
+	padding: 0 0 0 1.8rem; /* Can't remain within our 8px based sizing due to browser defaults */
 }
 
 .content li {
@@ -139,6 +141,7 @@ ul {
 		margin-top: 0;
 	}
 
+/* ... Images & Figures ... */
 figure {
 	margin: 0.8rem 0 0;
 }
